k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-scorer
  labels:
    app: resume-scorer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: resume-scorer
  template:
    metadata:
      labels:
        app: resume-scorer
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
      containers:
        - name: web
          image: ghcr.io/saranya-sallagundla/resume-scorer:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
